# openapi.yaml
@@ -1818,6 +1818,11 @@ components:
           type: string
           format: email
           nullable: true
+        password:
+          type: string
+          minLength: 6
+          nullable: true
+          description: Новый пароль пользователя
         role:
           type: string
           enum: [USER, EDITOR, ADMIN]
